[project]
name = "ai-focus-express-mcp"
version = "0.1.0"
description = "AI焦点速递MCP服务"
requires-python = ">=3.8"
dependencies = [
    "gradio>=4.0.0",
    "arxiv>=2.0.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "google-search-python>=1.2.0",
    "python-dateutil>=2.8.0"
]

[project.scripts]
ai-focus-express = "app:main"